--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -41,13 +41,13 @@
     }
   
 
-    &:hover &__side--front {
-        transform: rotateY(-180deg);
-    }
+    // &:hover &__side--front {
+    //     transform: rotateY(-180deg);
+    // }
 
-    &:hover &__side--back {
-        transform: rotateY(0);
-    }
+    // &:hover &__side--back {
+    //     transform: rotateY(0);
+    // }
 
 
     // FRONT SIDE STYLING
@@ -72,7 +72,7 @@
 
         &--3 {
             background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), 
-            url(../../assets/img//nat-7.jpg);
+            url(../img/nat-7.jpg);
         }
     }
 
