--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -67,12 +67,12 @@
 
         &--2 {
             background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), 
-            url(../../assets/img//nat-6.jpg);
+            url(../../assets/img/nat-6.jpg);
         }
 
         &--3 {
             background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), 
-            url(../img/nat-7.jpg);
+            url(../../assets/img/nat-7.jpg);
         }
     }
 
